--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>大远的博客 | 专注于Golang、Web后端、区块链</title>
-    <meta property="og:title" content="大远的博客 | 专注于Golang、Web后端、区块链">
+    <title>大远的博客 | 天作棋盘，星为子，谁人能下？地作琵琶，路为弦，何人能弹？</title>
+    <meta property="og:title" content="大远的博客 | 天作棋盘，星为子，谁人能下？地作琵琶，路为弦，何人能弹？">
     <meta property="og:type" content="website">
-    <meta name="Keywords" content="golang,btcd,区块链,hd wallet,加密与解密">
+    <meta name="Keywords" content="大远,golang,btcd,区块链,hd wallet,加密与解密">
     <meta name="description" content="专注于Golang、Web后端、区块链">
     <meta property="og:url" content="http://www.tpkeep.com/">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
@@ -41,7 +41,7 @@
                         </a>
                     </h1>
                 
-                <p class="description">专注于Golang、Web后端、区块链</p>
+                <p class="description">天作棋盘，星为子，谁人能下？地作琵琶，路为弦，何人能弹？</p>
             </div>
             <div>
                 <nav id="nav-menu" class="clearfix">
