--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>大远的思维时空 | 天作棋盘，星为子，谁人能下？地作琵琶，路为弦，何人能弹？</title>
-    <meta property="og:title" content="大远的思维时空 | 天作棋盘，星为子，谁人能下？地作琵琶，路为弦，何人能弹？">
+    <title>大远的思维时空 | 不懂编程、不懂区块链、啥都不懂</title>
+    <meta property="og:title" content="大远的思维时空 | 不懂编程、不懂区块链、啥都不懂">
     <meta property="og:type" content="website">
     <meta name="Keywords" content="大远,golang,btcd,区块链,hd wallet,加密与解密">
     <meta name="description" content="专注于Golang、Web后端、区块链">
@@ -41,7 +41,7 @@
                         </a>
                     </h1>
                 
-                <p class="description">天作棋盘，星为子，谁人能下？地作琵琶，路为弦，何人能弹？</p>
+                <p class="description">不懂编程、不懂区块链、啥都不懂</p>
             </div>
             <div>
                 <nav id="nav-menu" class="clearfix">
