--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
 <meta name="keywords" content="golang,btc,以太坊,区块链">
 <meta property="og:type" content="website">
 <meta property="og:title" content="tpkeeper">
-<meta property="og:url" content="http:&#x2F;&#x2F;tpkeep.com&#x2F;index.html">
+<meta property="og:url" content="http:&#x2F;&#x2F;tpkeep.com&#x2F;blog&#x2F;index.html">
 <meta property="og:site_name" content="tpkeeper">
 <meta property="og:description" content="专注于Golang、Web后端、区块链">
 <meta property="og:locale" content="zh-CN">
 <meta name="twitter:card" content="summary">
 
-<link rel="canonical" href="http://tpkeep.com/">
+<link rel="canonical" href="http://tpkeep.com/blog/">
 
 
 <script id="page-configurations">
@@ -194,7 +194,7 @@
   
   
   <article itemscope itemtype="http://schema.org/Article" class="post-block home" lang="zh-CN">
-    <link itemprop="mainEntityOfPage" href="http://tpkeep.com/blog/encryption-signature/">
+    <link itemprop="mainEntityOfPage" href="http://tpkeep.com/blog/blog/encryption-signature/">
 
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="image" content="/blog/images/avatar.jpg">
@@ -277,7 +277,7 @@
   
   
   <article itemscope itemtype="http://schema.org/Article" class="post-block home" lang="zh-CN">
-    <link itemprop="mainEntityOfPage" href="http://tpkeep.com/blog/encryption-asymmetric/">
+    <link itemprop="mainEntityOfPage" href="http://tpkeep.com/blog/blog/encryption-asymmetric/">
 
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="image" content="/blog/images/avatar.jpg">
@@ -366,7 +366,7 @@
   
   
   <article itemscope itemtype="http://schema.org/Article" class="post-block home" lang="zh-CN">
-    <link itemprop="mainEntityOfPage" href="http://tpkeep.com/blog/encryption-overview/">
+    <link itemprop="mainEntityOfPage" href="http://tpkeep.com/blog/blog/encryption-overview/">
 
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="image" content="/blog/images/avatar.jpg">
@@ -452,7 +452,7 @@
   
   
   <article itemscope itemtype="http://schema.org/Article" class="post-block home" lang="zh-CN">
-    <link itemprop="mainEntityOfPage" href="http://tpkeep.com/blog/encryption-symmetric/">
+    <link itemprop="mainEntityOfPage" href="http://tpkeep.com/blog/blog/encryption-symmetric/">
 
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="image" content="/blog/images/avatar.jpg">
@@ -535,7 +535,7 @@
   
   
   <article itemscope itemtype="http://schema.org/Article" class="post-block home" lang="zh-CN">
-    <link itemprop="mainEntityOfPage" href="http://tpkeep.com/blog/hd-wallet-pubkeytoaddr/">
+    <link itemprop="mainEntityOfPage" href="http://tpkeep.com/blog/blog/hd-wallet-pubkeytoaddr/">
 
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="image" content="/blog/images/avatar.jpg">
@@ -622,7 +622,7 @@
   
   
   <article itemscope itemtype="http://schema.org/Article" class="post-block home" lang="zh-CN">
-    <link itemprop="mainEntityOfPage" href="http://tpkeep.com/blog/hd-wallet-seedtopubkey/">
+    <link itemprop="mainEntityOfPage" href="http://tpkeep.com/blog/blog/hd-wallet-seedtopubkey/">
 
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="image" content="/blog/images/avatar.jpg">
@@ -718,7 +718,7 @@
   
   
   <article itemscope itemtype="http://schema.org/Article" class="post-block home" lang="zh-CN">
-    <link itemprop="mainEntityOfPage" href="http://tpkeep.com/blog/hd-wallet-mnemonic/">
+    <link itemprop="mainEntityOfPage" href="http://tpkeep.com/blog/blog/hd-wallet-mnemonic/">
 
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="image" content="/blog/images/avatar.jpg">
@@ -809,7 +809,7 @@
   
   
   <article itemscope itemtype="http://schema.org/Article" class="post-block home" lang="zh-CN">
-    <link itemprop="mainEntityOfPage" href="http://tpkeep.com/blog/hd-wallet-overview/">
+    <link itemprop="mainEntityOfPage" href="http://tpkeep.com/blog/blog/hd-wallet-overview/">
 
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="image" content="/blog/images/avatar.jpg">
@@ -903,7 +903,7 @@
   
   
   <article itemscope itemtype="http://schema.org/Article" class="post-block home" lang="zh-CN">
-    <link itemprop="mainEntityOfPage" href="http://tpkeep.com/blog/btcd-src-rpc/">
+    <link itemprop="mainEntityOfPage" href="http://tpkeep.com/blog/blog/btcd-src-rpc/">
 
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="image" content="/blog/images/avatar.jpg">
@@ -992,7 +992,7 @@
   
   
   <article itemscope itemtype="http://schema.org/Article" class="post-block home" lang="zh-CN">
-    <link itemprop="mainEntityOfPage" href="http://tpkeep.com/blog/btcd-src-mempool/">
+    <link itemprop="mainEntityOfPage" href="http://tpkeep.com/blog/blog/btcd-src-mempool/">
 
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="image" content="/blog/images/avatar.jpg">
