--- a/btcd-src-wire/index.html
+++ b/btcd-src-wire/index.html
@@ -56,7 +56,7 @@
 <meta name="keywords" content="btcd">
 <meta property="og:type" content="article">
 <meta property="og:title" content="btcd源码分析系列：5 - p2p网络的消息协议">
-<meta property="og:url" content="http:&#x2F;&#x2F;tpkeep.com&#x2F;btcd-src-wire&#x2F;index.html">
+<meta property="og:url" content="http:&#x2F;&#x2F;tpkeep.com&#x2F;blog&#x2F;btcd-src-wire&#x2F;index.html">
 <meta property="og:site_name" content="tpkeeper">
 <meta property="og:description" content="参考：protocol document 、btcd  协议其实就是一个标准，btc有多种语言的实现版本，他们之间能够正常通信的基础就是共同遵守了这个标准。btc定义的协议有很多，包括p2p之间通信协议、交易认证协议、pow共识协议等等。本文主要分析p2p网络的消息协议及代码实现 btc 的p2p网络的传输层支持tcp、udp、onion，应用层使用的即是本文讨论的消息协议">
 <meta property="og:locale" content="zh-CN">
@@ -66,7 +66,7 @@
 <meta name="twitter:card" content="summary">
 <meta name="twitter:image" content="en-resource:&#x2F;&#x2F;database&#x2F;532:1">
 
-<link rel="canonical" href="http://tpkeep.com/btcd-src-wire/">
+<link rel="canonical" href="http://tpkeep.com/blog/btcd-src-wire/">
 
 
 <script id="page-configurations">
@@ -198,7 +198,7 @@
   
   
   <article itemscope itemtype="http://schema.org/Article" class="post-block " lang="zh-CN">
-    <link itemprop="mainEntityOfPage" href="http://tpkeep.com/blog/btcd-src-wire/">
+    <link itemprop="mainEntityOfPage" href="http://tpkeep.com/blog/blog/btcd-src-wire/">
 
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="image" content="/blog/images/avatar.jpg">
