--- a/hd-wallet-pubkeytoaddr/index.html
+++ b/hd-wallet-pubkeytoaddr/index.html
@@ -56,7 +56,7 @@
 <meta name="keywords" content="HD Wallet">
 <meta property="og:type" content="article">
 <meta property="og:title" content="HD Wallet 系列：公钥与地址">
-<meta property="og:url" content="http:&#x2F;&#x2F;tpkeep.com&#x2F;hd-wallet-pubkeytoaddr&#x2F;index.html">
+<meta property="og:url" content="http:&#x2F;&#x2F;tpkeep.com&#x2F;blog&#x2F;hd-wallet-pubkeytoaddr&#x2F;index.html">
 <meta property="og:site_name" content="tpkeeper">
 <meta property="og:description" content="简单的理解，地址就是公钥&#x2F;脚本哈希值的base58格式一、地址的格式 P2PKH (Pay To PubKey Hash) 格式的地址  P2SH (Pay To Script Hash) 格式的地址">
 <meta property="og:locale" content="zh-CN">
@@ -67,7 +67,7 @@
 <meta name="twitter:card" content="summary">
 <meta name="twitter:image" content="http:&#x2F;&#x2F;tpkeep.com&#x2F;image&#x2F;p2pkh_addr.png">
 
-<link rel="canonical" href="http://tpkeep.com/hd-wallet-pubkeytoaddr/">
+<link rel="canonical" href="http://tpkeep.com/blog/hd-wallet-pubkeytoaddr/">
 
 
 <script id="page-configurations">
@@ -199,7 +199,7 @@
   
   
   <article itemscope itemtype="http://schema.org/Article" class="post-block " lang="zh-CN">
-    <link itemprop="mainEntityOfPage" href="http://tpkeep.com/blog/hd-wallet-pubkeytoaddr/">
+    <link itemprop="mainEntityOfPage" href="http://tpkeep.com/blog/blog/hd-wallet-pubkeytoaddr/">
 
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="image" content="/blog/images/avatar.jpg">
